# 1.0.10 : --/--/2020

* PBXArray
* Email
* OR sur find
* eq NULL transformé en ISNULL
* autocomplete multi champs de recherche
* JsonApi optimizations (Encoder / Decoder)
* Date functions updates
* Monetary
* Query addons
* Jobqueue & Notifications

# 1.0.9 : 08/03/2020

* Nested Tree create and remove

# 1.0.8 : 23/02/2020

* Greater or equal or null condition

# 1.0.7 : 09/02/2020

* Error on remove API call

# 1.0.6 : 01/02/2020

* * ApiController, reread after create or update

# 1.0.5 : 20/01/2020

* MediaResponse
* Start count in StorageInterface
* Where in relations

# 1.0.4 : Autologin & bugs

* AutoLogin via FreeSSO and AuthNegociator
* getOne : required id
* createOne : PK ignore

# 1.0.2 : First test version

* JsonApi / Json input, output format
* Autocomplete webservice
* Phinx integration

# 1.0.0 : Work in progress