@@ -8,7 +8,7 @@ $jobqueueRoutes = [
     'freefw.jobqueue.getall' => [
         'method'     => \FreeFW\Router\Route::METHOD_GET,
         'model'      => 'FreeFW::Model::Jobqueue',
-        'url'        => '/v1/core/jobqueue',
+        'url'        => '/v1/sys/jobqueue',
         'controller' => 'FreeFW::Controller::Jobqueue',
         'function'   => 'getAll',
         'auth'       => \FreeFW\Router\Route::AUTH_IN,
@@ -23,7 +23,7 @@ $jobqueueRoutes = [
     'freefw.jobqueue.getone' => [
         'method'     => \FreeFW\Router\Route::METHOD_GET,
         'model'      => 'FreeFW::Model::Jobqueue',
-        'url'        => '/v1/core/jobqueue/:jobq_id',
+        'url'        => '/v1/sys/jobqueue/:jobq_id',
         'controller' => 'FreeFW::Controller::Jobqueue',
         'function'   => 'getOne',
         'auth'       => \FreeFW\Router\Route::AUTH_IN,
@@ -41,7 +41,7 @@ $jobqueueRoutes = [
     'freefw.jobqueue.createone' => [
         'method'     => \FreeFW\Router\Route::METHOD_POST,
         'model'      => 'FreeFW::Model::Jobqueue',
-        'url'        => '/v1/core/jobqueue',
+        'url'        => '/v1/sys/jobqueue',
         'controller' => 'FreeFW::Controller::Jobqueue',
         'function'   => 'createOne',
         'auth'       => \FreeFW\Router\Route::AUTH_IN,
@@ -59,7 +59,7 @@ $jobqueueRoutes = [
     'freefw.jobqueue.updateone' => [
         'method'     => \FreeFW\Router\Route::METHOD_PUT,
         'model'      => 'FreeFW::Model::Jobqueue',
-        'url'        => '/v1/core/jobqueue/:jobq_id',
+        'url'        => '/v1/sys/jobqueue/:jobq_id',
         'controller' => 'FreeFW::Controller::Jobqueue',
         'function'   => 'updateOne',
         'auth'       => \FreeFW\Router\Route::AUTH_IN,
@@ -74,7 +74,7 @@ $jobqueueRoutes = [
     'freefw.jobqueue.deleteone' => [
         'method'     => \FreeFW\Router\Route::METHOD_DELETE,
         'model'      => 'FreeFW::Model::Jobqueue',
-        'url'        => '/v1/core/jobqueue/:jobq_id',
+        'url'        => '/v1/sys/jobqueue/:jobq_id',
         'controller' => 'FreeFW::Controller::Jobqueue',
         'function'   => 'removeOne',
         'auth'       => \FreeFW\Router\Route::AUTH_IN,
