@@ -10,6 +10,7 @@
 * Monetary
 * Query addons
 * Jobqueue & Notifications
+* Mailer / Messages / Json response
 
 # 1.0.9 : 08/03/2020
 
